6번문제 결과값은 출력되지만 맘에안듬